WSF-5695: Update font 18px to use variable

--- a/app/assets/stylesheets/partials/modules/widgets/_flexslider.scss
+++ b/app/assets/stylesheets/partials/modules/widgets/_flexslider.scss
@@ -220,7 +220,7 @@
 		&:before {
 			@extend %transition-subtle;
 			color: $color-txt-dark;
-			@include font-size(18, 1);
+			@include font-size($font-size-lrg-2, 1);
 
 			/* Contain controls version */
 			.flexslider--contain-controls & {color: #fff;}
