--- a/app/assets/stylesheets/partials/modules/_detail-view.scss
+++ b/app/assets/stylesheets/partials/modules/_detail-view.scss
@@ -115,7 +115,7 @@
   }
 
   .detail-view__hdr-sub {
-    @include font-size(18, 1.5);
+    @include font-size($font-size-lrg-2, 1.5);
     @include to-rem(margin-bottom, $spacing-half);
     color: $color-txt-light;
 
@@ -286,7 +286,7 @@
     /* Meta */
     .detail-view__meta em {
       display: block;
-      @include font-size(18, 1.3);
+      @include font-size($font-size-lrg-2, 1.3);
 
       /* Sale price */
       &.detail-view__meta__sale-price {
