--- a/app/assets/stylesheets/partials/modules/_icon.scss
+++ b/app/assets/stylesheets/partials/modules/_icon.scss
@@ -259,7 +259,7 @@
 /* Large */
 .icon--lrg:before {@include font-size($font-size-lrg, 1);}
 
-.icon--xlrg:before {@include font-size(18, 1);}
+.icon--xlrg:before {@include font-size($font-size-lrg-2, 1);}
 
 /* Extra large */
 .icon--giga:before {@include font-size(48, 1);}
