--- a/app/assets/stylesheets/partials/modules/_promo-tile.scss
+++ b/app/assets/stylesheets/partials/modules/_promo-tile.scss
@@ -26,7 +26,7 @@
 
     /* Increase font size at this breakpoint */
     @include respond-min($non-palm) {
-      @include font-size(18);
+      @include font-size($font-size-lrg-2);
     }
   }
 
