--- a/app/assets/stylesheets/partials/utils/_vars.scss
+++ b/app/assets/stylesheets/partials/utils/_vars.scss
@@ -42,6 +42,8 @@ $font-size-micro: $font-size - 5 !default;
 /* Large */
 $font-size-lrg: $font-size + 2 !default;
 
+$font-size-lrg-2: $font-size + 4 !default;
+
 /* Extra large */
 $font-size-xlrg: 24 !default;
 
