--- a/app/views/centres/index.html.erb
+++ b/app/views/centres/index.html.erb
@@ -38,7 +38,7 @@
       <nav role="navigation">
         <ul class="horiz-list horiz-list--gutter-half">
           <li>
-            <a href="<%= products_path %>">
+            <a href="<%= browse_path %>">
               <span class="icon icon--shirt" aria-hidden="true"></span>Shop products
             </a>
           </li>
