Rename category template

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -5,7 +5,7 @@
 <h1 class="hide-visually">Products</h1>
 
 <%# 'Super_cat' and 'Category' %>
-<script type="text/ng-template" id="categoryItemTemplate">
+<script type="text/ng-template" id="CategoryItemTemplate">
   <div class="drop-down-menu__hdr drop-down-menu__divider islet">
     <em>{{search.categories.title}}</em>
     <div ng-include src="'FilterItemBackButton'"></div>
