Use a / base path for browsers with good pushState support. Use relative base path for browsers with not-so-good pushState support.

--- a/app/views/layouts/base.html.erb
+++ b/app/views/layouts/base.html.erb
@@ -4,7 +4,10 @@
 <!--[if gt IE 8]><!-->            <html class="no-js" lang="en-au">            <!--<![endif]-->
 <head>
   <%= render 'shared/auth' if Rails.env.production? || Rails.env.uat? %>
-  <base href="<%= request.path %>">
+
+  <!--[if !IE]><base href="/"><![endif]-->
+  <!--[if lte IE 9]><base href="<%= request.path %>"><![endif]-->
+
   <meta name="fragment" content="!">
   <meta charset="utf-8">
   <meta name="viewport" content="initial-scale=1.0, width=device-width">
