Applying a fix to stores UI after IE banner went in

--- a/app/assets/stylesheets/partials/modules/_stores-maps.scss
+++ b/app/assets/stylesheets/partials/modules/_stores-maps.scss
@@ -41,6 +41,11 @@
     }
   }
 
+  /* Old IE */
+  @include old-ie {
+    .stores & {top: 381px;}
+  }
+
   /* Non JS users */
   .no-js & {position: static;}
 
