--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -185,7 +185,7 @@
 			<nav role="navigation" aria-label="Main navigation">
 				<ul class="nav-main horiz-list horiz-list--fit horiz-list--center horiz-list--dividers">
 				  <li><%= link_to centre_stores_path(params[:centre_id] || params[:id]), :class => (page?(:stores) ? 'is-active' : nil), target: '_self' do %><span class="icon icon--store" aria-hidden="true"></span><span class="hide-visually"> Stores</span><% end %></li>
-				  <li><%= link_to centre_browse_path(params[:centre_id] || params[:id]), :class => (page?(:products) ? 'is-active' : nil), target: '_self' do %><span class="icon icon--products" aria-hidden="true"></span><span class="hide-visually"> Products</span><% end %></li>
+				  <li><%= link_to centre_products_path(params[:centre_id] || params[:id]), :class => (page?(:products) ? 'is-active' : nil), target: '_self' do %><span class="icon icon--products" aria-hidden="true"></span><span class="hide-visually"> Products</span><% end %></li>
 				  <li><%= link_to centre_deals_path(params[:centre_id] || params[:id]), :class => (page?(:deals) ? 'is-active' : nil), target: '_self' do %><span class="icon icon--deals" aria-hidden="true"></span><span class="hide-visually"> Deals</span><% end %></li>
 				  <li><%= link_to centre_events_path(params[:centre_id] || params[:id]), :class => (page?(:events) ? 'is-active' : nil), target: '_self' do %><span class="icon icon--events" aria-hidden="true"></span><span class="hide-visually"> Events</span><% end %></li>
 				</ul>
