--- a/app/views/stores/show.html.erb
+++ b/app/views/stores/show.html.erb
@@ -190,7 +190,7 @@
 
           // Add a hook if there is only 'Opening hours' item in `storefront__details__meta`
           if ($('.storefront__details__meta dd').length === 2) {
-            $('.storefront__details__meta').addClass('is-storefront-details-meta-one');
+            $('.storefront__details__meta').addClass('is-only-item');
           }
 
           // Run 'Flexslider' plugin
