Apply UCS Private Use Area to all icon fonts

--- a/app/assets/stylesheets/partials/modules/_icon.scss
+++ b/app/assets/stylesheets/partials/modules/_icon.scss
@@ -45,7 +45,7 @@
 .icon--events:before {content: "\e003";}
 
 /* Favourites */
-.icon--favs:before {content: "\e02a";}
+.icon--favs:before {content: "\e030";}
 
 /* Search */
 .icon--search:before {content: "\e014";}
@@ -75,7 +75,7 @@
 .icon--video:before {content: "\e004";}
 
 /* User */
-.icon--user:before {content: "\e02b";}
+.icon--user:before {content: "\e02a";}
 
 /* Phone */
 .icon--phone:before {content: "\e005";}
@@ -90,7 +90,7 @@
 .icon--signout:before {content: "\e00e";}
 
 /* List */
-.icon--list:before {content: "\e02e";}
+.icon--list:before {content: "\e02b";}
 
 /* Comment */
 .icon--comment:before {content: "\e010";}
@@ -117,7 +117,7 @@
 .icon--instagram:before {content: "\e032";}
 
 /* YouTube */
-.icon--youtube:before {content: "\f167";}
+.icon--youtube:before {content: "\e033";}
 
 /* Close large */
 .icon--close-lrg:before {content: "\e00f";}
@@ -135,46 +135,46 @@
 .icon--tick-full:before {content: "\e027";}
 
 /* Service */
-.icon--service:before {content: "\e02d";}
+.icon--service:before {content: "\e02f";}
 
 /* Switch vertical */
-.icon--switch-vertical-full:before {content: "\e02c";}
+.icon--switch-vertical-full:before {content: "\e02e";}
 
 /* Switch horizontal */
-.icon--switch-horizontal-full:before {content: "\e035";}
+.icon--switch-horizontal-full:before {content: "\e039";}
 
 /* Ellipses horizontal */
-.icon--ellipsis-horizontal:before {content: "\f141";}
+.icon--ellipsis-horizontal:before {content: "\e034";}
 
 /* Ellipses vertical */
-.icon--ellipsis-vertical:before {content: "\f142";}
+.icon--ellipsis-vertical:before {content: "\e035";}
 
 /* Plus */
-.icon--plus:before {content: "\f067";}
+.icon--plus:before {content: "\e036";}
 
 /* Back to top */
 .icon--back-to-top:before {content: "\e031";}
 
 /* PDF */
-.icon--pdf:before {content: "\e033";}
+.icon--pdf:before {content: "\e037";}
 
 /* Gift card */
 .icon--gift-card:before {
-  content: "\e034";
+  content: "\e038";
   color: $color-brand;
 }
 
 /* Shirt */
-.icon--shirt:before {content: "\e037";}
+.icon--shirt:before {content: "\e03b";}
 
 /* Play */
-.icon--play:before {content: "\e038";}
+.icon--play:before {content: "\e03c";}
 
 /* Bag */
-.icon--bag:before {content: "\e036";}
+.icon--bag:before {content: "\e03a";}
 
 /* Megaphone */
-.icon--megaphone:before {content: "\e039";}
+.icon--megaphone:before {content: "\e03d";}
 
 /* Arrow up */
 .icon--arrow-up:before {content: "\e018";}
@@ -222,10 +222,10 @@
 .icon--arrow-right-full:before {content: "\e009";}
 
 /* Arrow double up */
-.icon--arrow-up-dbl:before {content: "\e02f";}
+.icon--arrow-up-dbl:before {content: "\e02c";}
 
 /* Arrow double down */
-.icon--arrow-down-dbl:before {content: "\e030";}
+.icon--arrow-down-dbl:before {content: "\e02d";}
 
 /* Arrow opposites */
 .icon--arrow-opposites:before {content: "\e007";}
