--- a/app/assets/stylesheets/partials/modules/widgets/_flexslider.scss
+++ b/app/assets/stylesheets/partials/modules/widgets/_flexslider.scss
@@ -84,7 +84,7 @@
 				float: none !important;
 				@extend %transition-subtle;
 				cursor: pointer;
-				border: 1px solid #dfdfdf;
+				border: 1px solid $color-grey-2;
 
 				/* Hover and active states */
 				&:hover,
@@ -146,7 +146,7 @@
 				content: "";
 				@include to-rem(width height, 8);
 				border-radius: 100%;
-				background-color: #dfdfdf;
+				background-color: $color-grey-2;
 				position: absolute;
 				top: 50%;
 				left: 50%;
