WSF-5799: Added section element to centre info

--- a/app/views/centre_info/_getting_here.html.erb
+++ b/app/views/centre_info/_getting_here.html.erb
@@ -16,10 +16,10 @@
 <% end %>
 
 <%# Getting here %>
-<h2 id="getting-here">Getting Here</h2>
+<section aria-labelledby="getting-here" class="mrg-dbl-alt">
+  <h2 id="getting-here">Getting Here</h2>
 
-<%# Shopping centre map %>
-<div class="mrg-dbl-alt">
+  <%# Shopping centre map %>
   <div class="mrg-base-alt">
     <div class="centre-location">
       <%# Static Google map %>
@@ -75,7 +75,7 @@
       </div>
     </div>
   <% end %>
-</div>
-<%# //Shopping centre map %>
+  <%# //Shopping centre map %>
 
+</section>
 <%# //Getting here %>
