--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -21,18 +21,20 @@
     </div>
 
     <%- if @event.description.present? -%>
-      <h2 class="detail-view__hdr-sub hn">Event Details</h2>
+    <section aria-labelledby="event-details">
+      <h2 class="detail-view__hdr-sub hn" id="event-details">Event Details</h2>
       <div class="detail-view__desc" itemprop="description">
         <% to_paragraphs(@event.description).each do |text| %>
           <p><%= text %></p>
         <%- end %>
       </div>
+    </section>
     <% end %>
 
   </div>
 
-  <div class="detail-view__schedule island">
-    <h2 class="detail-view__hdr-sub hn">Event Schedule</h2>
+  <section class="detail-view__schedule island" aria-labelledby="event-schedule">
+    <h2 class="detail-view__hdr-sub hn" id="event-schedule">Event Schedule</h2>
 
     <%# Event schedule %>
     <dl class="timeline">
@@ -52,7 +54,7 @@
     </dl>
     <%# //Event schedule %>
 
-  </div>
+  </section>
   <%# //Event details %>
 
 </div>
