--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -132,14 +132,14 @@
   <%# Available Colours %>
   <%- if @product.available_colours.present? -%>
   <div class="grid__item non-palm-two-fifths">
-    <div class="island island--flush-btm-palm">
-      <h2 class="detail-view__hdr-sub hn">Available Colours</h2>
+    <section class="island island--flush-btm-palm" aria-labelledby="available-colours">
+      <h2 class="detail-view__hdr-sub hn" id="available-colours">Available Colours</h2>
       <ul class="horiz-list horiz-list--comma"><!--
         <%- @product.available_colours.each do |colour| -%>
           --><li><strong><%= colour %></strong></li><!--
         <%- end -%>
       --></ul>
-    </div>
+    </section>
   </div>
   <%- end -%>
   <%# //Available Colours %>
@@ -151,12 +151,12 @@
   <div class="grid__item non-palm-one-whole">
   <%- end -%>
     <%- if @product.detailed_description.present? || @product.short_description.present? %>
-      <div class="island">
-        <h2 class="detail-view__hdr-sub hn">Description</h2>
+      <section class="island" aria-labelledby="description">
+        <h2 class="detail-view__hdr-sub hn" id="description">Description</h2>
         <div class="txt-formatted txt-formatted--user-generated">
           <%= raw(@product.detailed_description || @product.short_description) %>
         </div>
-      </div>
+      </section>
     <%- end -%>
   </div>
   <%# //Description %>
@@ -165,8 +165,8 @@
 
 <%# Availability %>
 <%- if @product_centres.present? -%>
-<div class="island detail-view__divider--top-btm detail-view__divider--top">
-  <h2 class="detail-view__hdr-sub detail-view__mrg-off hn"><%= @product.retail_chain_name %> also available at</h2>
+<section class="island detail-view__divider--top-btm detail-view__divider--top" aria-labelledby="available">
+  <h2 class="detail-view__hdr-sub detail-view__mrg-off hn" id="available"><%= @product.retail_chain_name %> also available at</h2>
   <ul class="detail-view__centres">
     <%- @product_centres.each do |centre| -%>
       <li>
@@ -179,7 +179,7 @@
       </li>
     <%- end -%>
   </ul>
-</div>
+</section>
 <%- end -%>
 <%# //Availability %>
 
