--- a/app/views/centres/index.html.erb
+++ b/app/views/centres/index.html.erb
@@ -87,7 +87,7 @@
             <li class="js-viewport-check">
               <a class="national__centre-tile national__centre-tile--<%= centre.code %>" href="<%= centre_path( centre ) %>">
                 <div class="container">
-                  <h3 class="h1"><%= centre.short_name %></h3>
+                  <div class="h1"><%= centre.short_name %></div>
                   <span class="icon icon--arrow-right icon--lrg" aria-hidden="true"></span>
                 </div>
               </a>
