WSF-5799: Fix up section element after PR feedback

--- a/app/views/centre_service_details/show.html.erb
+++ b/app/views/centre_service_details/show.html.erb
@@ -5,8 +5,7 @@
   <div class="txt-formatted">
 
     <%# Concierge Services %>
-    <section aria-labelledby="concierge-services" class="mrg-dbl-alt">
-      <h2 id="concierge-services">Concierge Services</h2>
+    <div class="mrg-dbl-alt">
 
       <%# Concierge Desk %>
       <% if @concierge.present? %>
@@ -88,7 +87,7 @@
        </div>
       </div>
       <%# //Westfield gift cards %>
-    </section>
+    </div>
     <%# //Concierge Services %>
 
   </div>
