--- a/app/views/centre_info/_community.html.erb
+++ b/app/views/centre_info/_community.html.erb
@@ -1,6 +1,6 @@
 <%# Community %>
-<section aria-labelledby="community" class="mrg-dbl-alt">
-  <h2 id="community">Community</h2>
+<section aria-labelledby="info-community" class="mrg-dbl-alt">
+  <h2 id="info-community">Community</h2>
   <%# [BACKEND] Replace the `alt` attribute with dynamic data where indicated %>
   <%= image_tag 'http://placehold.it/980x280', class: 'mrg-base', alt: 'Photo of [name of the community where the photo came from]' %>
 
