--- a/app/assets/stylesheets/partials/utils/_vars.scss
+++ b/app/assets/stylesheets/partials/utils/_vars.scss
@@ -42,7 +42,7 @@ $font-size-micro: $font-size - 5 !default;
 /* Large */
 $font-size-lrg: $font-size + 2 !default;
 
-$font-size-lrg-2: $font-size + 4 !default;
+$font-size-lrger: $font-size + 4 !default;
 
 /* Extra large */
 $font-size-xlrg: 24 !default;
