--- a/app/views/layouts/_section_nav.html.erb
+++ b/app/views/layouts/_section_nav.html.erb
@@ -19,8 +19,8 @@
     </div>
     <%# Show products/deals/events centre selector toggle button %>
     <button class="btn btn--main btn--main-alt4 btn--main-compact-icon-sml" toggle-visibility="show-products-deals-events-toggle">
+      <span class="hide-visually">Show <%= params[:controller] %> shopping centre select menu</span>
       <span class="icon icon--ellipsis-horizontal icon--xlrg icon--flush-top" aria-hidden="true"></span>
-      <span class="hide-visually">Toggle <%= params[:controller] %> centre selector</span>
     </button>
     <%# //Show products/deals/events centre selector toggle button %>
   </div>
